--- a/source/FlowStudio.Presentation.View/App.config
+++ b/source/FlowStudio.Presentation.View/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<configSections>
-		<section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+		<section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+		<section name="flowStudio" type="FlowStudio.Common.Configuration.FlowStudioConfigurationSection, FlowStudio.Common"/>
 	</configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -14,12 +15,12 @@
 			<typeAlias alias="external" type="Microsoft.Practices.Unity.ExternallyControlledLifetimeManager, Microsoft.Practices.Unity" />
 
 			<!-- MVVM Messenger -->
-			<typeAlias alias="IMessenger" type="GalaSoft.MvvmLight.Messaging.IMessenger, GalaSoft.MvvmLight.WPF4"/>
-			<typeAlias alias="Messenger" type="GalaSoft.MvvmLight.Messaging.Messenger, GalaSoft.MvvmLight.WPF4"/>
+			<typeAlias alias="IMessenger" type="GalaSoft.MvvmLight.Messaging.IMessenger, GalaSoft.MvvmLight.WPF45"/>
+			<typeAlias alias="Messenger" type="GalaSoft.MvvmLight.Messaging.Messenger, GalaSoft.MvvmLight.WPF45"/>
 
 			<!-- View Models -->
-			<typeAlias alias="MainWindowViewModel" type="FlowStudio.Presentation.ViewModel, FlowStudio.Presentation.ViewModel"/>
-			<typeAlias alias="OptionsViewModel" type="FlowStudio.Presentation.ViewModel, FlowStudio.Presentation.ViewModel"/>
+			<typeAlias alias="MainWindowViewModel" type="FlowStudio.Presentation.ViewModel.MainWindowViewModel, FlowStudio.Presentation.ViewModel"/>
+			<typeAlias alias="OptionsViewModel" type="FlowStudio.Presentation.ViewModel.OptionsViewModel, FlowStudio.Presentation.ViewModel"/>
 
 		</typeAliases>
 		<containers>
@@ -27,12 +28,16 @@
 				<types>
 
 					<!-- MVVM Messenger -->
-					<type type="MainWindowViewModel" mapTo="MainWindowViewModel">
+					<type type="IMessenger" mapTo="Messenger">
 						<lifetime type="singleton"/>
 					</type>
-
+					
 					<!-- View Models -->
 					<type type="OptionsViewModel" mapTo="OptionsViewModel">
+						<lifetime type="singleton"/>
+					</type>
+					
+					<type type="MainWindowViewModel" mapTo="MainWindowViewModel">
 						<lifetime type="singleton"/>
 					</type>
 
@@ -40,4 +45,58 @@
 			</container>
 		</containers>
 	</unity>
+	<flowStudio>
+		<tools>
+			<add name="System.Activities.Statements.ForEach`1, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ControlFlow"/>
+			<add name="System.Activities.Statements.If, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ControlFlow"/>
+			<add name="System.Activities.Statements.Parallel, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ControlFlow"/>
+			<add name="System.Activities.Statements.ParallelForEach`1, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ControlFlow"/>
+			<add name="System.Activities.Statements.DoWhile, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ControlFlow"/>
+			<add name="System.Activities.Statements.Pick, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ControlFlow"/>
+			<add name="System.Activities.Statements.PickBranch, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ControlFlow"/>
+			<add name="System.Activities.Statements.Sequence, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ControlFlow"/>
+			<add name="System.Activities.Statements.Switch`1, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ControlFlow"/>
+			<add name="System.Activities.Statements.While, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ControlFlow"/>
+
+			<add name="System.Activities.Statements.Flowchart, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Flowchart"/>
+			<add name="System.Activities.Statements.FlowDecision, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Flowchart"/>
+			<add name="System.Activities.Statements.FlowSwitch`1, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Flowchart"/>
+
+			<add name="System.ServiceModel.Activities.CorrelationScope, System.ServiceModel.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Messaging"/>
+			<add name="System.ServiceModel.Activities.InitializeCorrelation, System.ServiceModel.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Messaging"/>
+			<add name="System.ServiceModel.Activities.Receive, System.ServiceModel.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Messaging"/>
+			<add name="System.ServiceModel.Activities.Presentation.Factories.ReceiveAndSendReplyFactory, System.Activities.Core.Presentation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Messaging"/>
+			<add name="System.ServiceModel.Activities.Send, System.ServiceModel.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Messaging"/>
+			<add name="System.ServiceModel.Activities.Presentation.Factories.SendAndReceiveReplyFactory, System.Activities.Core.Presentation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Messaging"/>
+			<add name="System.ServiceModel.Activities.TransactedReceiveScope, System.ServiceModel.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Messaging"/>
+
+			<add name="System.Activities.Statements.Persist, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Runtime"/>
+			<add name="System.Activities.Statements.TerminateWorkflow, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Runtime"/>
+
+			<add name="System.Activities.Statements.Assign, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Primitives"/>
+			<add name="System.Activities.Statements.Assign`1, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Primitives"/>
+			<add name="System.Activities.Statements.Delay, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Primitives"/>
+			<add name="System.Activities.Statements.InvokeMethod, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Primitives"/>
+			<add name="System.Activities.Statements.WriteLine, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Primitives"/>
+
+			<add name="System.Activities.Statements.CancellationScope, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Transactions"/>
+			<add name="System.Activities.Statements.CompensableActivity, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Transactions"/>
+			<add name="System.Activities.Statements.Compensate, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Transactions"/>
+			<add name="System.Activities.Statements.Confirm, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Transactions"/>
+			<add name="System.Activities.Statements.TransactionScope, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Transactions"/>
+
+			<add name="System.Activities.Statements.AddToCollection`1, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Collections"/>
+			<add name="System.Activities.Statements.ClearCollection`1, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Collections"/>
+			<add name="System.Activities.Statements.ExistsInCollection`1, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Collections"/>
+			<add name="System.Activities.Statements.RemoveFromCollection`1, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="Collections"/>
+
+			<add name="System.Activities.Statements.Rethrow, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ErrorHandling"/>
+			<add name="System.Activities.Statements.Throw, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ErrorHandling"/>
+			<add name="System.Activities.Statements.TryCatch, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="ErrorHandling"/>
+
+			<add name="System.Activities.Statements.StateMachine, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="StateMachine" />
+			<add name="System.Activities.Statements.State, System.Activities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="StateMachine" />
+			<add name="System.Activities.Core.Presentation.FinalState, System.Activities.Core.Presentation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" category="StateMachine" />
+		</tools>
+	</flowStudio>
 </configuration>
